[gd_scene load_steps=9 format=3 uid="uid://cqxcn2r7q0b27"]

[ext_resource type="FontFile" uid="uid://dv8obm6mlador" path="res://style/fonts/operius-mono.ttf" id="1_mkxx5"]
[ext_resource type="Script" path="res://script/menu/pause_menu_button_container.gd" id="2_pbbuf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ie5r5"]
bg_color = Color(0, 0, 0, 0.490196)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2xnr"]
bg_color = Color(0.332881, 0.332881, 0.332881, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_0nviv"]
font = ExtResource("1_mkxx5")
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6sg0"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ms702"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_md1da"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_pbbuf")

[node name="DarkenedBackground" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1088.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ie5r5")

[node name="PauseMenuPanel" type="PanelContainer" parent="DarkenedBackground"]
layout_mode = 0
offset_left = 640.0
offset_top = 192.0
offset_right = 1280.0
offset_bottom = 888.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q2xnr")

[node name="PauseMenuTitleContainer" type="MarginContainer" parent="DarkenedBackground/PauseMenuPanel"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 462

[node name="PauseMenuTitle" type="Label" parent="DarkenedBackground/PauseMenuPanel/PauseMenuTitleContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_0nviv")
horizontal_alignment = 1

[node name="PauseMenuButtonContainer" type="MarginContainer" parent="DarkenedBackground/PauseMenuPanel"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 224
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="DarkenedBackground/PauseMenuPanel/PauseMenuButtonContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 80

[node name="ResumeButton" type="Button" parent="DarkenedBackground/PauseMenuPanel/PauseMenuButtonContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 74)
layout_mode = 2
focus_mode = 1
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_h6sg0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ms702")
theme_override_styles/normal = SubResource("StyleBoxFlat_md1da")
text = "RESUME"

[node name="ReturnToMenuButton" type="Button" parent="DarkenedBackground/PauseMenuPanel/PauseMenuButtonContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 74)
layout_mode = 2
focus_mode = 1
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_h6sg0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ms702")
theme_override_styles/normal = SubResource("StyleBoxFlat_md1da")
text = "RETURN TO MENU"

[node name="ExitButton" type="Button" parent="DarkenedBackground/PauseMenuPanel/PauseMenuButtonContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 74)
layout_mode = 2
focus_mode = 1
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_h6sg0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ms702")
theme_override_styles/normal = SubResource("StyleBoxFlat_md1da")
text = "EXIT TO DESKTOP"

[connection signal="pressed" from="DarkenedBackground/PauseMenuPanel/PauseMenuButtonContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="DarkenedBackground/PauseMenuPanel/PauseMenuButtonContainer/VBoxContainer/ReturnToMenuButton" to="." method="_on_return_to_menu_button_pressed"]
[connection signal="pressed" from="DarkenedBackground/PauseMenuPanel/PauseMenuButtonContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
